# rust_crud_client_backend

./: README.MD  run.bat
backend/: Cargo.toml
backend/src/: main.rs  utils.rs
backend/src/api/: mod.rs
backend/src/api/text/: database.rs  index.rs  mod.rs  types.rs
client/: Cargo.toml
client/src/: main.rs
